Australia Regional Events

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -15,19 +15,19 @@ l_english:
  AST_USA_test1: "Maintain US Trade"
  AST_CHI_test1: "Expand Chinese Trade"
  USA.AST_USA_trade_influence: "USA-Australian Diplomatic Influence"
- AST_Negotiate_USA_troop_support_dec: "Negotiate USA troop support"
- USA_trade_influnce_above_50: "§YRequires §! §G50 §! §GUSA§! §YInfluence§!" 
- USA_trade_influnce_above_50_blocked: "§R50 §! §GUSA §! §YInfluence §! §RRequired§! "
- USA_trade_influnce_above_50_tooltip: "§YRequires §! §G50 §! §GUSA§! §YInfluence§!"
- CHI_trade_influnce_above_50: "§YRequires §! §G50 §! §GChina §! §YInfluence§!" 
- CHI_trade_influnce_above_50_blocked: "§R50 §! §GChina §! §YInfluence §! §RRequired§!"
- CHI_trade_influnce_above_50_tooltip: "§YRequires §! §G50 §! §GChina §! §YInfluence§!"
- ASTCHIIMI2: "§YRequires §! §G50 §! §GChina §! §YInfluence§!"
- ASTCHIIMI2_blocked: "§R70 §! §GChina §! §YInfluence §! §RRequired§!"
- ASTCHIIMI2_tooltip: "§YRequires §! §G70 §! §GChina §! §YInfluence§!"
- AST_Invest_into_Hong_Kong_dec: "Receive 5 Influence from Hong Kong Investments"
- AST_A_Growing_Trade_Partner_dec: "Collect 10 Influence from [CHI.GetAdjective] Trade Growth"
- AST_Trade_and_Economic_Cooperation_Framework_dec: "Restructure Trade with China Awarding 10 Influence"
+ AST_Negotiate_USA_troop_support_dec: "Negotiate [USA.GetFlag] USA Troop Support"
+ USA_trade_influnce_above_50: "§YRequires §! §G50 §! [USA.GetFlag] §GUSA§! §YInfluence§!" 
+ USA_trade_influnce_above_50_blocked: "§R50 §! [USA.GetFlag] §GUSA §! §YInfluence §! §RRequired§! "
+ USA_trade_influnce_above_50_tooltip: "§YRequires §! §G50 §! [USA.GetFlag] §GUSA§! §YInfluence§! \n This will follow the historical precedent From 1942 until 1945 during the Pacific War, up to one million U.S. military personnel were stationed at various locations throughout eastern Australia."
+ CHI_trade_influnce_above_50: "§YRequires §! §G50 §! [CHI.GetFlag] §GChina §! §YInfluence§!" 
+ CHI_trade_influnce_above_50_blocked: "§R50 §! [CHI.GetFlag] §GChina §! §YInfluence §! §RRequired§!"
+ CHI_trade_influnce_above_50_tooltip: "§YRequires §! §G50 §! [CHI.GetFlag] §GChina §! §YInfluence§!"
+ ASTCHIIMI2: "§YRequires §! [CHI.GetFlag] §G50 §! §GChina §! §YInfluence§!"
+ ASTCHIIMI2_blocked: "§R70 §! [CHI.GetFlag] §GChina §! §YInfluence §! §RRequired§!"
+ ASTCHIIMI2_tooltip: "§YRequires §! §G70 §! [CHI.GetFlag] §GChina §! §YInfluence§!"
+ AST_Invest_into_Hong_Kong_dec: "Receive 5 Influence from [SAR.GetFlag] Hong Kong Investments"
+ AST_A_Growing_Trade_Partner_dec: "Collect 10 Influence from [CHI.GetFlag] [CHI.GetAdjective] Trade Growth"
+ AST_Trade_and_Economic_Cooperation_Framework_dec: "Restructure Trade with [CHI.GetFlag] China Awarding 10 Influence"
  AST_Chinese_Immigrants1_mod: "Chinese Immigration"
  AST_Chinese_Immigrants2_mod: "Expanded Chinese Immigration"
  AST_develop_Sangara_rubber_plantation: "Grow Sangara Rubber Plantation"
@@ -616,6 +616,41 @@ l_english:
  australia_md.153.d2: "[CHI.GetNameDefCap] has refused our request for a Free Trade Agreement to be signed between our nations, hopefully this does not mark the beginning of a rift between our nations, they seem to have forgotten our past commitments to them."
  australia_md.153.o1: "The FTA is signed"
  australia_md.153.o2: "Unfortunately an agreement could not be reached"
+ australia_md.154.t: "Australia Offers to Change Allegiances"
+ australia_md.154.d: "[AST.GetNameDefCap] has offered to Change Allegiances towards [CHI.GetNameDefCap] in exchange for a guarantee of defense, this may mark the beginning of a new level of cooperation between our nations, [USA.GetNameDefCap] will likely cancel their guarantee on [AST.GetNameDefCap] if they have one. However if we do not trust [AST.GetAdjective] motives we can decline."
+ australia_md.154.o1: "Guarantee [AST.GetAdjective]!"
+ australia_md.154.o2: "[AST.GetNameDefCap] can stay under the Western sphere of influence"
+ australia_md.155.t: "[CHI.GetNameDefCap] has Guaranteed [AST.GetNameDefCap]!"
+ australia_md.155.d: "[AST.GetNameDefCap] has been guaranteed by [CHI.GetNameDefCap] after diplomatic talks, partially due to a massive growth of [CHI.GetAdjective] & [AST.GetAdjective] trade and investments recently,  this may mark the beginning of a shift in [AST.GetAdjective] policy away from western influence, however these moves of alignment have been peaceful so far between [CHI.GetNameDefCap] and [AST.GetNameDefCap], also [AST.GetNameDefCap] been a long standing friend of [USA.GetNameDefCap], if we have a guarantee should we cancel that guarantee on [AST.GetNameDefCap] ?"
+ australia_md.155.o1: "Cancel the Guarantee on [AST.GetNameDefCap]"
+ australia_md.155.o2: "[AST.GetNameDefCap] will stay under our [USA.GetAdjective] sphere of influence"
+ australia_md.156.t: "A Geopolitical Shift ?"
+ australia_md.156.d1: "[AST.GetNameDefCap] has received a guarantee from [CHI.GetNameDefCap] and in response [USA.GetNameDefCap] has revoked their guarantee on [AST.GetNameDefCap], an [USA.GetAdjective] diplomat was quoted saying that there may be irrevocable differences between [AST.GetNameDefCap] and [USA.GetNameDefCap] regional strategies."
+ australia_md.156.d2: "[CHI.GetNameDefCap] has refused our request for a guarantee to be signed between our nations, hopefully this does not mark the beginning of a downturn in relations between our nations."
+ australia_md.156.d3: "[AST.GetNameDefCap] has received a guarantee from [CHI.GetNameDefCap] and [USA.GetNameDefCap] has witheld from revoking their guarantee on [AST.GetNameDefCap], an [USA.GetAdjective] diplomat was quoted saying that while there may be irrevocable differences between [USA.GetNameDefCap] and [CHI.GetNameDefCap] regional strategies, and that [AST.GetAdjective]-[USA.GetAdjective] relations need not neccesarily suffer as a result."
+ australia_md.156.o1: "[AST.GetNameDefCap] is now guaranteed only by [CHI.GetNameDefCap] after [USA.GetAdjective] revocation."
+ australia_md.156.o2: "Unfortunately an agreement could not be reached"
+ australia_md.156.o3: "[AST.GetNameDefCap] is now guaranteed by [CHI.GetNameDefCap] and [USA.GetAdjective], well this was an unexpected turn of events..."
+ australia_md.156.o4: "[USA.GetNameDefCap] has decided to keep meddling in our affairs by retaining their guarantee on [AST.GetNameDefCap]."
+ australia_md.156.o5: "[AST.GetNameDefCap] has now become a competition grounds for their strategical alliance."
+ australia_md.157.t: "Application for Developement Access in South China Sea"
+ australia_md.157.d: "We have received an application for developement access from [AST.GetNameDefCap], this may be a prudent move to allow [AST.GetNameDefCap] as having another nation in the region supporting our claims actively. [AST.GetNameDefCap] wishes to pay for and enhance the dockyards and infrastructure on the undeveloped island, we can accept or deny their request."
+ australia_md.157.o1: "Approve the application"
+ australia_md.157.o2: "Reject the application"
+ australia_md.158.t: "[CHI.GetAdjective] Response to Developement Access"
+ australia_md.158.d1: "[CHI.GetNameDefCap] has approved to our application for developement access in the South China Sea, The new developements will provide us with a friendly port that may be cruicial in holding [CHI.GetAdjective] influence in the contested area."
+ australia_md.158.d2: "[CHI.GetNameDefCap] has refused our request for developement access in the South China Sea, With [CHI.GetAdjective] officials refusing to answer questions on the subject the reason for the refusal so far remains a mystery."
+ australia_md.158.o1: "Upgrade the Spratly Islands Docks & Infrastructure"
+ australia_md.158.o2: "[CHI.GetNameDefCap] have Denied our Developement Access"
+ australia_md.159.t: "Application for Military Developement in South China Sea"
+ australia_md.159.d: "We have received an application for military developement from [AST.GetNameDefCap], if we further allow [AST.GetNameDefCap] to assist in developing the facilities it will bolster our claim to the islands as merely having another nations personnel present on our islands is a diplomatic victory. [AST.GetNameDefCap] wishes to pay for and enhance the Radar and Airport on the semi-developed island, we can accept or deny their request."
+ australia_md.159.o1: "Approve the application"
+ australia_md.159.o2: "Reject the application"
+ australia_md.160.t: "[CHI.GetAdjective] Response to Military Developement Request"
+ australia_md.160.d1: "[CHI.GetNameDefCap] has approved to our application for military developement access in the South China Sea, The new developements will provide [CHI.GetNameDefCap] with an active airbase and a radar station cruicial for early attack warning systems."
+ australia_md.160.d2: "[CHI.GetNameDefCap] has refused our request for developement access in the South China Sea, With [CHI.GetAdjective] officials not even acknowledging the question for reason for the refusal it seems this request is denied."
+ australia_md.160.o1: "Upgrade the Spratly Islands Radar & Airport"
+ australia_md.160.o2: "[CHI.GetNameDefCap] have Denied our Military Developement Request"
 
  #CONDITIONS FOR TRADE RELUCTANCE / ACCEPTANCE in 00_scripted_diplomatic_actions.txt and onactions.
  condition_CANZUK: "CANZUK/ANZUS Candidate Member"
@@ -1798,6 +1833,7 @@ l_english:
  AST_UN_Convention_Law_Of_The_Sea: "United Nations Convention Law Of The Sea"
  AST_UN_Convention_Law_Of_The_Sea_desc: "China has been called diplomatically to ratify the UN Convention Law Of the Sea (UNCLOS). UNCLOS allows state parties to claim 12-nm territorial seas and 200-nm EEZs around their coastlines and “naturally formed” land features that can sustain human habitation, we will side with [CHI.GetNameDefCap] and voice our opposition to this western motivated endeavour. "
  AST_Expansion_into_the_South_China_Sea: "Expansion into the South China Sea"
+ AST_UN_Convention_Law_Of_The_Sea_idea: "Expansion into the South China Sea"
  AST_Expansion_into_the_South_China_Sea_desc: "After [CHI.GetNameDefCap] refused to ratify UNCLOS, they have been pursuing an agenda of rapid expanison into the South China Seas islands, we will provide engineering assistance to help [CHI.GetNameDefCap] complete their projects in the region."
  AST_South_China_Seas_Militarisation: "South China Seas Militarisation"
  AST_South_China_Seas_Militarisation_desc: "With our assitance the islands in the South China Sea are capable of supporting military infrastructure, The islands will be upgraded with airports and improved dockyards to provide a strategic advantage to any future conflict that crosses the South China Sea."
@@ -1823,17 +1859,17 @@ l_english:
  AST_Taiwainese_University_and_Education_Collaboration_desc: "A University and Education Collaboration between our two nations would be beneficial to both our scientific commities as whole, this proram will help our scientists overcome funding issues which will spearhead breakthroughs in critical technologies for our nations."
  AST_Keeping_the_Status_Quo: "Keeping the Status Quo"
  AST_Keeping_the_Status_Quo: "Rather than taking a confrontational approach it is more pragmatic to use peaceful means to gain regional security for our nations and for our friends too, [AST.GetLeader] has made a public statement affirming our neutrality on  the China-Taiwan relations issue for now."
- AST_JAEPA_yes_tt: "§G If Japan Accepts: §!"
+ AST_JAEPA_yes_tt: "§G If §! [JAP.GetFlag] §GJapan Accepts: §!"
  AST_Joint_Security_Pact_idea: "Joint Security Pact"
- AST_Joint_Security_Pact_yes_tt: "§GIf Japan Accepts: §!"
+ AST_Joint_Security_Pact_yes_tt: "§G If §! [JAP.GetFlag] §GJapan Accepts: §!"
  AST_Aceh_Malay_Relations_tt: "§YAccepting this decision will enter into a mutual §! §Gnon-aggression pact §!"
- AST_Aceh_Malay_Relations_aus_tt: "§YIf both §! §GAceh §! §Yand §! §GMalaysia accept: §! "
- AST_Indo_Malay_Relations_aus_tt: "§YIf both §! §GIndonesia §! §Yand §! §GMalaysia accept: §! "
- AST_Korea_Australia_Free_Trade_Agreement_tt: "§YIf §! §GKorea Accepts: §!"
- AST_Dialogue_with_the_North_aus_tt: "§GIf Korea DPR Accepts: §!"
- AST_Stepping_over_the_DMZ_aus_tt: "§YIf both §! §GKorea §! §Yand §! §GKorea DPR accept: §! "
- AST_Invest_into_Hong_Kong_tt: "§YIf §! §GHong Kong Accepts: §!"
- AST_A_Growing_Trade_Partner_tt: "§YIf §! §GChina Accepts: §!"
+ AST_Aceh_Malay_Relations_aus_tt: "§YIf both §! [ACE.GetFlag] §GAceh §! §Yand §! [MAY.GetFlag] §GMalaysia accept: §! "
+ AST_Indo_Malay_Relations_aus_tt: "§YIf both §! [IND.GetFlag] §GIndonesia §! §Yand §! [MAY.GetFlag] §GMalaysia accept: §! "
+ AST_Korea_Australia_Free_Trade_Agreement_tt: "§YIf §! [KOR.GetFlag] §GKorea Accepts: §!"
+ AST_Dialogue_with_the_North_aus_tt: "§YIf §! [NKO.GetFlag] §GKorea DPR Accepts: §!"
+ AST_Stepping_over_the_DMZ_aus_tt: "§YIf both §! [KOR.GetFlag] §GKorea §! §Yand §! [NKO.GetFlag] §GKorea DPR accept: §! "
+ AST_Invest_into_Hong_Kong_tt: "§YIf §! [SAR.GetFlag] §GHong Kong Accepts: §!"
+ AST_A_Growing_Trade_Partner_tt: "§YIf §! [CHI.GetFlag] §GChina Accepts: §!"
  AST_Chinese_Immigrants1_idea: "Chinese Immigration"
  AST_Chinese_Immigrants2_idea: "Expanded Chinese Immigration"
  AST_Chinese_immigrants1_dec: "Chinese Immigration"
@@ -1844,6 +1880,9 @@ l_english:
  AST_Chinese_Immi_flag: "has completed decision Chinese Immigration"
  AST_Chinese_Immigrants1_mod: "Allowed Chinese Immigration"
  AST_Chinese_Immigrants2_mod: "Expanded Chinese Immigration"
+ AST_Reshaping_our_strategic_Alliances_tt: "§YIf §! [CHI.GetFlag] §GChina Accepts: §!"
+ AST_Reshaping_our_strategic_Alliances1_tt: "§YIf §! [CHI.GetFlag] §GChina Accepted §! [USA.GetFlag] §G[USA.GetNameDefCap] receives: §!"
+ AST_Ruling_Party_pop_tt: "§G Increases §! §YCurrent Ruling Party §! §GPopularity : §!"
 
 
 #military
