Iraqi fix + Changelogs

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,13 @@
 v1.10.4
 
+ Bugfix:
+  - Fixed an issue with Iraq where the 'Uday Hussein' national spirit expired for no reason
+  - Fixed an issue with Iran where the revolution goes undone if you click a certain decision betwee March 2001 and June 2001
+  - Fixed an issue with Iran where the prime minister portraits were displayed incorrectly
+
+
+v1.10.3
+
  Achievements & Ribbons:
   - Added achievement Diamonds Are A Ruler's Best Friend: "Extract over 500 precious metals"
   - Added achievement Botswana: "As Botswana, research Human Imitation AI"
