--- a/localisation/english/MD_focus_SPR_l_english.yml
+++ b/localisation/english/MD_focus_SPR_l_english.yml
@@ -1697,7 +1697,7 @@ l_english:
  SPR_increase_5_mil_opinion_tt: "§YThe Military§! Opinion §G+5§!\n"
  SPR_increase_15_mil_opinion_tt: "§YThe Military§! Opinion §G+15§!\n"
  SPR_increases_the_military_opinion_by_10_tt: "§YThe Military§! Opinion Increases by §G+10§! via §Y$SPR_pride_of_the_army_idea$§! National Spirit\n"
- SPR_the_new_elections_tt: "The monarchs have redesigned the political system of Spain. They will allow certain political parties and movements govern on their behalf.\n\nPossible Co-Governing Parties:\n\t§Y[Nat_Fascism_L]§!\n\t§Y[conservatism_L]§!\n\t§Y[Nat_Populism_L]§!\n\t§Y[socialism_L]§!\n\t\n\nTaking one of the above parties into your coalition will unlock their respective focus tree. You can only have one party at a time and if you remove them from your coalition you will lose all respective buffs or debuffs you gained from having them in coalition.\n"
+ SPR_the_new_elections_tt: "The monarchs have redesigned the political system of Spain. They will allow certain political parties and movements govern on their behalf.\n\nPossible Co-Governing Parties:\n§Y[Nat_Fascism_L]§!\n§Y[conservatism_L]§!\n§Y[Nat_Populism_L]§!\n§Y[socialism_L]§!\n\n\nTaking one of the above parties into your coalition will unlock their respective focus tree. You can only have one party at a time and if you remove them from your coalition you will lose all respective buffs or debuffs you gained from having them in coalition.\n"
  SPR_carlists_ascend_to_throne_tt: "Ascends the §YCarlists§! to the Throne of Spain.\n"
  SPR_monarchs_unbanned_tt: "§Y[Western_Autocracy_L]§! & §Y[Monarchist_L]§! are unbanned and may now gain power once again.\n"
  SPR_the_spanish_empire_revived_TT: "§Y[Monarchist_L]§! declares a new Spanish empire. The revanchism will begin..."
