Australian Regional Content

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -533,7 +533,7 @@ l_english:
  australia_md.133.o1: "The agreement is signed"
  australia_md.133.o2: "Unfortunately an agreement could not be reached"
  australia_md.134.t: "[AST.GetAdjective] Hyundai Technology Purchase Request"
- australia_md.134.d: "An offer from [AST.GetNameDefCap] has been received detailing the [AST.GetAdjective] intent to purchase Hyundai Tank and armor related technologies with our permission, they will us $12bn for the acquisition of these blueprints and designs so their own scientists can research their Armor technologies more efficiently."
+ australia_md.134.d: "An offer from [AST.GetNameDefCap] has been received detailing the [AST.GetAdjective] intent to purchase Hyundai Tank and armor related technologies with our permission, [AST.GetNameDefCap] will pay us $12bn for the acquisition of these blueprints and designs so their own scientists can research their Armor technologies more efficiently."
  australia_md.134.o1: "Permit the Sale"
  australia_md.134.o2: "Deny the Sale"
  australia_md.135.t: "[KOR.GetAdjective] Response to Hyundai Tech Purchase"
@@ -613,7 +613,7 @@ l_english:
  australia_md.152.o2: "Reject the FTA"
  australia_md.153.t: "[CHI.GetAdjective] Response to the Free Trade Agreement"
  australia_md.153.d1: "[CHI.GetNameDefCap] has agreed to our request for a Free Trade Agreement to be signed between our nations, hopefully this marks the beginning of a new era of properity for both of our nations."
- australia_md.153.d2: "[CHI.GetNameDefCap] has refused our request for a Free Trade Agreement to be signed between our nations, hopefully this does not mark the beginning of a rift between our nations, they seem to have forgotten our past commitments to them."
+ australia_md.153.d2: "[CHI.GetNameDefCap] has refused our request for a Free Trade Agreement to be signed between our nations, hopefully this does not mark the beginning of a trade imbalance between our nations."
  australia_md.153.o1: "The FTA is signed"
  australia_md.153.o2: "Unfortunately an agreement could not be reached"
  australia_md.154.t: "Australia Offers to Change Allegiances"
@@ -651,6 +651,51 @@ l_english:
  australia_md.160.d2: "[CHI.GetNameDefCap] has refused our request for developement access in the South China Sea, With [CHI.GetAdjective] officials not even acknowledging the question for reason for the refusal it seems this request is denied."
  australia_md.160.o1: "Upgrade the Spratly Islands Radar & Airport"
  australia_md.160.o2: "[CHI.GetNameDefCap] have Denied our Military Developement Request"
+ australia_md.161.t: "Taiwan-Australia Free Trade Agreement Request"
+ australia_md.161.d: "[AST.GetNameDefCap] has requested that [TAI.GetNameDefCap] sign together a Free Trade Agreement, which will provide a new sources of materials to be available for production use both nations, and open investment opportunites in both nations. However if we wish not to sign the trade agreement we can decline."
+ australia_md.161.o1: "Sign the FTA"
+ australia_md.161.o2: "Reject the FTA"
+ australia_md.162.t: "[TAI.GetAdjective] Response to the Free Trade Agreement"
+ australia_md.162.d1: "[TAI.GetNameDefCap] has agreed to our request for a Free Trade Agreement to be signed between our nations, hopefully this marks the beginning of a new era of properity for both of our nations."
+ australia_md.162.d2: "[TAI.GetNameDefCap] has refused our request for a Free Trade Agreement to be signed between our nations, hopefully this does not mark the beginning of a rift between our nations, Taiwan seems to have forgotten our past regional assistance and recognition of them."
+ australia_md.162.o1: "The FTA is signed"
+ australia_md.162.o2: "Unfortunately an agreement could not be reached"
+ australia_md.163.t: "[AST.GetAdjective] TSMC Technology Purchase Request"
+ australia_md.163.d: "An offer from [AST.GetNameDefCap] has been received detailing the [AST.GetAdjective] intent to purchase TMSC semiconductor related technologies with our permission, [AST.GetNameDefCap] will pay $13.5bn for the acquisition of these blueprints and designs so [AST.GetAdjective] scientists can research their Computing and Internet technologies more efficiently."
+ australia_md.163.o1: "Permit the Sale"
+ australia_md.163.o2: "Deny the Sale"
+ australia_md.164.t: "[TAI.GetAdjective] Response TSMC Technology Purchase"
+ australia_md.164.d1: "Our diplomats returned from [TAI.GetNameDefCap] bearing good news, the request to purchase TMSC semiconductor technologies was successful, [AST.GetAdjective] scientists are eagerly awaiting the new schematics."
+ australia_md.164.d2: "Our diplomats returned from [TAI.GetNameDefCap] bearing bad news, the request to purchase TMSC semiconductor technologies was unsuccessful, [AST.GetAdjective] scientists will have to perform the research on Computing and Internet technologies without assistance."
+ australia_md.164.o1: "The diplomats secured a good deal..."
+ australia_md.164.o2: "This is dissapointing news."
+ australia_md.165.t: "[AST.GetAdjective] request to modernise our Airports"
+ australia_md.165.d: "An security report from [AST.GetNameDefCap] has been received outlining some necessary changes that will be required if in the future a sizeable airforce is required to protect [TAI.GetNameDefCap] from outside aggression, The [AST.GetAdjective] plan is to modernise the runways in Kaohsiung and build radar systems to protect the airfield with our permission, [AST.GetNameDefCap] will pay building costs, Should we allow their plans to proceed?"
+ australia_md.165.o1: "Approve Construction"
+ australia_md.165.o2: "Deny the Construction"
+ australia_md.166.t: "[TAI.GetAdjective] Response TSMC Technology Purchase"
+ australia_md.166.d1: "[AST.GetAdjective] representatives have returned from [TAI.GetNameDefCap] bearing excellent news, the request to purchase TMSC semiconductor technologies was successful, [AST.GetAdjective] scientists are eagerly awaiting the new schematics."
+ australia_md.166.d2: "[AST.GetAdjective] representatives have returned from [TAI.GetNameDefCap] bearing unwelcome news, the request to purchase TMSC semiconductor technologies was unsuccessful, [AST.GetAdjective] scientists will have to perform the research on Computing and Internet technologies without assistance."
+ australia_md.166.o1: "Our representatives signed an excellent deal"
+ australia_md.166.o2: "Perhaps we couldve offered more..."
+ australia_md.167.t: "[AST.GetNameDefCap] requests to join the conflict"
+ australia_md.167.d: "[AST.GetNameDefCap] has requested to join the China-Taiwan war, as they were a previous participant in the Chinese War during WW2, they felt obligated to continue the fight at our side, should we allow [AST.GetNameDefCap] entry into the Conflict?"
+ australia_md.167.o1: "Taiwan Welcomes [AST.GetAdjective] help"
+ australia_md.167.o2: "Their assistance is not required."
+ australia_md.168.t: "[TAI.GetNameDefCap] Answers our Request"
+ australia_md.168.d1: "[TAI.GetNameDefCap] has accepted our request to join the war against [CHI.GetNameDefCap] , may we prevail in the Chinese war!"
+ australia_md.168.d2: "[TAI.GetNameDefCap] has refused our request to join the war against [CHI.GetNameDefCap] , we hope they prevail on without our assistance in the [CHI.GetAdjective] war!"
+ australia_md.168.o1: "Join the war to assist [TAI.GetNameDefCap]!"
+ australia_md.168.o2: "Unfortunately we cannot commit at this time"
+ australia_md.169.t: "[AST.GetNameDefCap] requests to join the conflict"
+ australia_md.169.d: "[AST.GetNameDefCap] has requested to join the China-Taiwan war, as they have recently pledged their support, they were obligated to join the fight at our side, should we allow [AST.GetNameDefCap] entry into the Conflict?"
+ australia_md.169.o1: "[CHI.GetNameDefCap] Welcomes [AST.GetAdjective] help"
+ australia_md.169.o2: "Their assistance is not required."
+ australia_md.170.t: "[CHI.GetNameDefCap] Answers our Request"
+ australia_md.170.d1: "[CHI.GetNameDefCap] has accepted our request to join the war against [CHI.GetNameDefCap] , may we prevail in the Chinese war!"
+ australia_md.170.d2: "[CHI.GetNameDefCap] has refused our request to join the war against [CHI.GetNameDefCap] , we hope they prevail on without our assistance in the [CHI.GetAdjective] war!"
+ australia_md.170.o1: "Join the war to assist [CHI.GetNameDefCap]!"
+ australia_md.170.o2: "Unfortunately we cannot commit at this time"
 
  #CONDITIONS FOR TRADE RELUCTANCE / ACCEPTANCE in 00_scripted_diplomatic_actions.txt and onactions.
  condition_CANZUK: "CANZUK/ANZUS Candidate Member"
@@ -1711,7 +1756,7 @@ l_english:
  AST_JAEPA_yes_tt: "§GIf Japan Accepts: §!"
  AST_Joint_Security_Pact_idea: "Joint Security Pact"
  AST_Indonesia_Australia_Comprehensive_Economic_Partnership_ast_tt: "§YIf §! §GIndonesia Accepts: §!"
-
+ AST_The_Chinese_Unification_War_tt: "If you supported Taiwan they will receive an offer to join the war, If you supported China they will receive an offer to join the war."
  
  #regional
  australia_new_zealand_rugby_mod: "Friendly Sports Rivalry"
@@ -1815,7 +1860,7 @@ l_english:
  AST_Support_PRC_China: "Support PRC China"
  AST_Support_PRC_China_desc: "We can opt to publicly state a change in our diplomatic allegances from supporting the western backed [TAI.GetNameDefCap] to supporting [CHI.GetNameDefCap]  our relations with [USA.GetNameDefCap] will be jeopordised severly, however our new partner [CHI.GetNameDefCap] may be more than happy to assist us for our support. "
  AST_Support_Taiwan_ROC: "Support Taiwan ROC"
- AST_Support_Taiwan_ROC_desc: "[AST.GetLeader] can make a public statement of commitment to our support on [TAI.GetAdjective] sovereignity, [AST.GetNameDefCap] will also provide logistical supplies and have an increased prescense in the maritime straight. [TAI.GetNameDefCap] and [USA.GetNameDefCap] relations towards [AST.GetNameDefCap] should improve. "
+ AST_Support_Taiwan_ROC_desc: "[AST.GetLeader] can make a public statement of commitment to our support on [TAI.GetAdjective] sovereignity, [AST.GetNameDefCap] will also provide logistical supplies and have an increased prescense in the maritime strait. [TAI.GetNameDefCap] and [USA.GetNameDefCap] relations towards [AST.GetNameDefCap] should improve. "
  AST_The_Forgotten_Incursion_flag: "Has not already supported [CHI.GetNameDefCap] Claim to Senkaku-Daiyou"
  AST_CHI_trade_idea: "Australian Chinese Trade"
  AST_CHI_trade1_idea: "Improved Chinese Trade"
@@ -1840,21 +1885,21 @@ l_english:
  AST_The_Senkaku_Daiyou_Islands1: "The Chinese Claim to Senkaku Daiyou Islands"
  AST_The_Senkaku_Daiyou_Islands1_desc: "[CHI.GetNameDefCap] has made a historical claim to the Senkaku-Daiyou Islands, these islands are currently under the administration of [JAP.GetNameDefCap], our government will support the [CHI.GetAdjective] claim to these Islands. This may §G Increase §! the chance §Y that Japan agrees to transfer §! §GSenkaku Islands§! §Y to China.§!"
  AST_The_Taiwanese_Strait: "The Taiwanese Strait"
- AST_The_Taiwanese_Strait_desc: "Now that the die has been cast, we have put our alliegance behind the more worthy nation of our support, we should start implementing a joint strategy to deal with their most likely source of conflict."
+ AST_The_Taiwanese_Strait_desc: "Now that the die has been cast, we have put our alliegance behind the more worthy nation of our support, we should start implementing a joint strategy to deal with their most likely source of conflict by fortifying their coastline at our expense."
  AST_The_Chinese_Unification_War: "The Chinese Unification War"
  AST_The_Chinese_Unification_War_desc: "The Chinese Civil War was fought between the Kuomintang-led government of the Republic of China and the forces of the Chinese Communist Party, with armed conflict continuing intermittently from 1 August 1927, now with the resuming of hostilities across the Taiwanese Strait we should help in all capabilities to bring a swift decisive victory to hand."
  AST_Nation_of_Taiwan_FTA: "Nation of Taiwan FTA"
  AST_Nation_of_Taiwan_FTA_desc: "A trade agreement will be entered into with Taiwan to fully realise the domestic growth potential both countries offer to each other, and that our industries are complimentary to each other such as [TAI.GetNameDefCap] has its high tech machinery and computing products, and [AST.GetNameDefCap] can provide the raw resources needed to supply those industries."
- AST_Microprocessor_Manufacting_Expertise: "Microprocessor Manufacting Expertise"
- AST_Microprocessor_Manufacting_Expertise_desc: "Taiwan produces about 90% of the world's most advanced semiconductors, mostly through the Taiwan Semiconductor Manufacturing Co Ltd (TSMC), the world's largest producer and a major Apple and Nvidia supplier, A purchase request for Intellectual propeties will be acquired from [TAI.GetNameDefCap] for Semiconductors and Microchips."
- AST_The_One_True_Republic_of_China: "The One True Republic of China"
- AST_The_One_True_Republic_of_China_desc: "Since the fragmentation of China began in 1927 a dream to realise a Unity under the legitimate rulers of China the Kuomintang has burned brightly, We will provide support to [TAI.GetNameDefCap] for this noble endeavour to Re-unite their people."
+ AST_Microprocessor_Manufacturing_Expertise: "TMSC Microprocessor Manufacturing"
+ AST_Microprocessor_Manufacturing_Expertise_desc: "Taiwan produces about 90% of the world's most advanced semiconductors, mostly through the Taiwan Semiconductor Manufacturing Co Ltd (TSMC), the world's largest producer and a major Apple and Nvidia supplier, A purchase request for Intellectual propeties will be acquired from [TAI.GetNameDefCap] for Semiconductors and Microchips."
+ AST_The_One_True_Republic_of_China: "Preparing the Republic of China"
+ AST_The_One_True_Republic_of_China_desc: "Since the fragmentation of China began in 1927 a dream to realise a Unity under the legitimate rulers of China the Kuomintang has burned brightly, [AST.GetNameDefCap] will upgrade airports runways and radar systems for [TAI.GetNameDefCap] for self defence and to to provide a means to which their noble endeavour to re-unite their people may be realised."
  AST_Glory_to_the_Kuomintang: "Glory to the Kuomintang"
  AST_Glory_to_the_Kuomintang_desc: "With the Fall of Beijing the [CHI.GetAdjective] army has been pushed from their Capital and the [CHI.GetAdjective] people freed from the yoke of harsh communist oppression, in our actions we have continued to lay the foundations for a whole China to be reborn."
  AST_Invest_in_Taipei: "Invest in Taipei"
  AST_Invest_in_Taipei_desc: "A recommendation has been put forth by our economic minister that we should invest in Taipei, to capitalise on the [TAI.GetNameDefCap] economy, and grow future business opportunities. "
  AST_Taiwanese_Production_Plants: "Taiwanese Production Plants"
- AST_Taiwanese_Production_Plants_desc: "If [TAI.GetNameDefCap] is to defend itself into the future, it is in our own interest to help them meet their required demands for military good, as we ahve an excess of materials that can be supplied, in additon we will facilitate the construction of Military factories and civilian factories to support their production."
+ AST_Taiwanese_Production_Plants_desc: "If [TAI.GetNameDefCap] is to defend itself into the future, it is in our own interest to help them meet their required demands for military good, as we have an excess of materials that can be supplied, in additon we will facilitate the construction of Military factories and civilian factories to support their production."
  AST_Taiwainese_University_and_Education_Collaboration: "Taiwainese University and Education Collaboration"
  AST_Taiwainese_University_and_Education_Collaboration_desc: "A University and Education Collaboration between our two nations would be beneficial to both our scientific commities as whole, this proram will help our scientists overcome funding issues which will spearhead breakthroughs in critical technologies for our nations."
  AST_Keeping_the_Status_Quo: "Keeping the Status Quo"
@@ -1883,8 +1928,18 @@ l_english:
  AST_Reshaping_our_strategic_Alliances_tt: "§YIf §! [CHI.GetFlag] §GChina Accepts: §!"
  AST_Reshaping_our_strategic_Alliances1_tt: "§YIf §! [CHI.GetFlag] §GChina Accepted §! [USA.GetFlag] §G[USA.GetNameDefCap] receives: §!"
  AST_Ruling_Party_pop_tt: "§G Increases §! §YCurrent Ruling Party §! §GPopularity : §!"
-
-
+ AST_Support_PRC_good_mod: "§GSupported China PRC§! "
+ AST_Support_PRC_bad_mod: "§GSupported China PRC§!"
+ AST_Support_Taiwan_bad_mod: "§RSupported Taiwan ROC§!"
+ AST_Support_Taiwan_good_mod: "§GSupported Taiwan ROC§!"
+ AST_Nation_of_Taiwan_FTA_tt: "§YIf §! [TAI.GetFlag] §G[TAI.GetNameDefCap] Accepts: §!"
+ AST_The_Taiwanese_Strait_tt: "§Y The outcome of this focus will change depending: \n If §G$AST_Support_Taiwan_ROC$§! §Y is completed: §! \n Forts will be built along the [TAI.GetFlag] Taiwanese Western Coast. \n §YIf §! §G$AST_Support_PRC_China$§! §Y is completed: §! \n Forts will be built along the [CHI.GetFlag] Chinese Fujian Coast."
+ recognize_china: "§YRecognises the Peoples Republic of China §!"
+ AST_Recognise_PRC_dec: "§YRecognise §! §G[CHI.GetFlag] [CHI.GetNameDefCap] §! §Y as Legitimate§!"
+ AST_Recognise_ROC_dec: "§YRecognise §! §G[TAI.GetFlag] [TAI.GetNameDefCap] §! §Y as Legitimate§!"
+ Recognised_ROC: "Recognised Taiwan ROC"
+ Recognised_PRC: "Recognised China PRC"
+ VOL_WAR_DELAY: "§YOne year after sending Volunteers opted not to escalate the §! §GIndonesian-Aceh §! §Rwar§!"
 #military
  AST_ADF: "ADF"
  AST_ADF_desc: ""
